# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-03-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add more flexible nodes configuration
    * Update nodefinder (a rewrite) and remove the older nodefinder cruft
    * Support EC2 Erlang node auto-discovery based on
      security groups and/or tags
    * Move external Erlang dependencies into directories with
      cloudi_x_ prefix so that include_lib can be used without problems
    * Add the ability to change the distributed Erlang node connection type
      with the listen and connect nodes configuration options
    * Make configuration changes to the listen and connect nodes configuration
      options reset the configuration of cpg and nodefinder

2014-03-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify cloudi_services_monitor log messages
    * Provide configuration format within log at start-time
    * Fix configuration removal when MaxR is met
    * Update uuid

2014-03-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CT tests for cloudi_service_queue
    * Add a constraint based on testing for NextName in
      cloudi_service_queue both fault_isolation mode

2014-02-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix external service validation done during OS process spawn
    * Add websocket_ping to cloudi_service_http_cowboy
    * Add cache to cloudi_service_filesystem
      (so HTTP cache controls can be used when the cached files are refreshed)

2014-02-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix LinuxMint compilation issues

2014-02-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add fault_isolation argument to cloudi_service_queue
    * Add cloudi_service:send_async_active/8 for manually specifying the
      transaction id used in the service request

2014-02-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_queue for persistent queuing of