@@ -187,8 +187,11 @@ init([Protocol, SocketPath,
                 check_init_receive(check_init_send(ConfigOptions)),
             destination_refresh_first(DestRefresh, NewConfigOptions),
             {ok, MacAddress} = application:get_env(cloudi_core, mac_address),
-            UUID = cloudi_x_uuid:new(Dispatcher, [{timestamp_type, erlang},
-                                                  {mac_address, MacAddress}]),
+            {ok, TimestampType} = application:get_env(cloudi_core,
+                                                      timestamp_type),
+            UUID = cloudi_x_uuid:new(Dispatcher,
+                                     [{timestamp_type, TimestampType},
+                                      {mac_address, MacAddress}]),
             process_flag(trap_exit, true),
             {ok, 'CONNECT',
              State#state{dispatcher = Dispatcher,
