@@ -197,7 +197,8 @@ init([ProcessIndex, Module, Args, Timeout, Prefix,
             Dispatcher
     end,
     {ok, MacAddress} = application:get_env(cloudi_core, mac_address),
-    UUID = cloudi_x_uuid:new(Dispatcher, [{timestamp_type, erlang},
+    {ok, TimestampType} = application:get_env(cloudi_core, timestamp_type),
+    UUID = cloudi_x_uuid:new(Dispatcher, [{timestamp_type, TimestampType},
                                           {mac_address, MacAddress}]),
     State = #state{dispatcher = Dispatcher,
                    module = Module,
