@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-03-17 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add cloudi_service_api:nodes_set/2 for dynamically configuring
+      CloudI nodes configuration
+
 2014-03-14 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add more flexible nodes configuration
